Bug 1122408 - Fix potential deadlock codepath. r=BenWa